# gazebo_projection_mapping

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/gazebo_projection_mapping/: tf_to_link_state.h  tf_to_model_state.h
launch/: calibration_mouse_clicks.bash  camera_spawner.launch  checkerboard_detector.launch  chessboard_detector.launch  fullscreen_camera.bash  fullscreen_projection.bash  gazebo_projection_mapping.launch  gazebo_projection_mapping_2.launch  gazebo_projection_mapping_assembly.launch  gazebo_projection_mapping_assembly_tfs.launch  gazebo_projection_mapping_colrobot_van.launch  gazebo_projection_mapping_colrobot_van_tfs.launch  gazebo_projection_mapping_welding.launch  gazebo_projection_mapping_welding_tfs.launch  kinect2_image_saver.launch  socket_to_tf.launch
models/dot_grid/: model.config  model.sdf
models/dot_grid/materials/scripts/: dot_grid.material
models/electrical_drawing/: model.config  model.sdf
models/electrical_drawing/materials/scripts/: electrical_drawing.material
models/electrical_installation/: model.config  model.sdf
models/fire_extinguisher_drawing/: model.config  model.sdf
models/fire_extinguisher_drawing/materials/scripts/: fire_extinguisher_drawing.material
models/fire_hose_reel/: model.config  model.sdf
models/fire_hose_reel/materials/scripts/: fire_hose_reel.material
models/lab_with_windows/meshes/: lab_with_windows.stl
models/lab_without_windows/meshes/: lab_without_windows.stl
models/wall_pipe/: model.config  model.sdf
models/wall_pipe/meshes/: wall_pipe.stl
models/wall_plumbing/: model.config  model.sdf
models/wall_plumbing/materials/scripts/: wall_plumbing.material
src/: tf_to_link_state.cpp  tf_to_link_state_node.cpp  tf_to_model_state.cpp  tf_to_model_state_node.cpp
urdf/: camera.urdf.xacro  projector_asus_p1.urdf.xacro  projector_test.xacro
worlds/: assembly.world  beam.world  camera_intrinsics.world  camera_intrinsics_board.world  colrobot_van.world  demo_robotica_2015.world  demo_stirofone_wall.world  gball_with_wheels.world  heightmap.world  lab_with_ambient_light.world  lab_with_windows.world  lab_with_windows_simple.world  lab_with_windows_simple_with_robot.world  robotica2015.world  ship_interior.stl  ship_interior_without_ceiling.world  ship_interior_without_ceilingship_interior_without_ceiling.world  welding.world
