<?xml version="1.0"?>
<package>
	<name>gazebo_projection_mapping</name>
	<version>0.0.0</version>
	<description>The gazebo_projection_mapping package</description>
	<maintainer email="carloscosta.cmcc@gmail.com">Carlos Costa</maintainer>
	<license>BSD</license>
	<author email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</author>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>gazebo_msgs</build_depend>
	<build_depend>rosconsole</build_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>gazebo_msgs</run_depend>
	<run_depend>rosconsole</run_depend>
</package>